# qdu-RM-2.6

./: CMakeLists.txt  README.md  main.cpp  readme.md  try_cpp_detcter_armor.cpp
Armor/: CMakeLists.txt  digit.onnx  digit.pth  output.py  recognize.cpp  train.py
